test/bad/type_missmatch_05.mpp
var a:char;
var b:bool;

print a + b;
